application/content/css/site.css
/* ... */
.section-block {
    border: 1px solid #ddd;
    margin: 0 0 30px 0;
    padding: 0 15px 30px;
}

h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small, h1 .small, h2 .small, h3 .small, h4 .small, h5 .small, h6 .small, .h1 .small, .h2 .small, .h3 .small, .h4 .small, .h5 .small, .h6 .small {
    color: #7B9AAD;
}

.ui-datepicker {
    z-index: 9999 !important;
}


.dashboard-value {
    line-height: 100%;
    display: inline-block;
    padding-top: 6px;
    vertical-align: text-top;
}


@media (min-width: 1200px) {
    .affixed-side-nav {
        width: 262px;
    }

    .affixed-side-content{
        width: 292px;
        padding-right: 0px
    }
}

@media (min-width: 992px) and (max-width: 1199px){
    .affixed-side-nav {
        width: 212px;
    }

    .affixed-side-content {
        width: 242px;
        padding-right: 0px
    }

}
@media (min-width: 768px ) and (max-width: 991px) {
    .affixed-side-nav,
    .affixed-side-content {
        position: static;
    }

    .affixed-side-content{
        padding: 0 15px;
    }

}

@media (max-width: 767px) {
    .affixed-side-nav {
        display: none;
    }

    .affixed-side-content {
        position: static;
    }

    .affixed-side-content {
        padding: 0 15px;
    }

    .fc-header-left,
    .fc-header-center,
    .fc-header-right{
        display: block;
    }


    .panel.panel-default .panel-body .header a {
        margin-top : 8px;
    }

}

span {
    display: inline-block;
    line-height: 100%;

}

#sidebar a .fa-chevron-right {
    display: none;
    position: absolute;
    top: 50%;
    right: 10px;
    margin-top: -8px;
}

#sidebar a.active .fa-chevron-right {
    display: initial;
    color: white !important;
}


#sidebar a:hover .fa-chevron-right {
    display: initial;
    color: #adadad;
}

